--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <button type="button" class="download-button" onclick="itms-services://?action=download-manifest&url=http://loqi.me/app/Geoloqi.plist">Install
-                        on your iOS device</button>
+                    <a href="itms-services://?action=download-manifest&url=http://loqi.me/app/Geoloqi.plist">
+                        <button type="button" class="download-button">Install on your iOS device</button>
+                    </a>
                 </td>
             </tr>
         </table>
