Package for sample app iOS & minor index.html page changes

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <a href="itms-services://?action=download-manifest&url=http://loqi.me/app/Geoloqi.plist">
+                    <a href="itms-services://?action=download-manifest&url=packages/Info.plist">
                         <button type="button" class="download-button">Install on your iOS device</button>
                     </a>
                 </td>
