Light font added, index html changes to add logo for developed and for

--- a/index.html
+++ b/index.html
@@ -133,6 +133,25 @@
         u {
             text-decoration: none;
         }
+
+        .footer {
+            width: 100%;
+        }
+
+        .footer td {
+            width: 33%;
+            text-align: end;
+        }
+
+        .footer div {
+            font-size: 10pt;
+            text-decoration: underline;
+            font-family: Roboto-Light;
+        }
+
+        .footer div i {
+            padding: 10px;
+        }
     </style>
 </head>
 
@@ -164,13 +183,36 @@
             </tr>
             <tr>
                 <td class="otherinfo-header">Updated:</td>
-                <td class="otherinfo-value">20 Aug 2017</td>
+                <td class="otherinfo-value">30 Aug 2018</td>
             </tr>
             <tr>
                 <td colspan="2">
                     <a href="itms-services://?action=download-manifest&url=https://fahim-ihis.github.io/iosenterprise/packages/sampleapp.plist">
                         <button type="button" class="download-button">Install on your iOS device</button>
                     </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="footer">
+        <table>
+            <tr>
+                <td>
+                    <div style="text-align: left">
+                        <div>Brought to you by</div>
+                        <span style="font-size: 3.5em; color: #555;text-align: left">
+                            <i class="fab fa-digital-ocean"></i>
+                        </span>
+                    </div>
+                </td>
+                <td class="version-value"></td>
+                <td>
+                    <div style="text-align: right">
+                        <div>Developed by</div>
+                        <span style="font-size: 3.5em; color: #555;text-align: left">
+                            <i class="fab fa-digital-ocean"></i>
+                        </span>
+                    </div>
                 </td>
             </tr>
         </table>
