Added logo images

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
         .footer div i {
             padding: 10px;
         }
+        .footer div img {
+            padding: 4px;
+            width: 40%;
+        }
     </style>
 </head>
 
@@ -200,18 +204,20 @@
                 <td>
                     <div style="text-align: left">
                         <div>Brought to you by</div>
-                        <span style="font-size: 3.5em; color: #555;text-align: left">
+                        <!-- <span style="font-size: 3.5em; color: #555;text-align: left">
                             <i class="fab fa-digital-ocean"></i>
-                        </span>
+                        </span> -->
+                        <img src="images/logo1.png" alt="Brought to your by"/>
                     </div>
                 </td>
                 <td class="version-value"></td>
                 <td>
-                    <div style="text-align: right">
+                    <div style="text-align: right;">
                         <div>Developed by</div>
-                        <span style="font-size: 3.5em; color: #555;text-align: left">
+                        <!-- <span style="font-size: 3.5em; color: #555;text-align: left">
                             <i class="fab fa-digital-ocean"></i>
-                        </span>
+                        </span> -->
+                        <img style="float: right;"src="images/logo2.png" alt="Developed by" />
                     </div>
                 </td>
             </tr>
